feat: add swagger foc for show method
